Q6-install-Calico/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cni-lab
  labels:
    purpose: cni-networkpolicy-lab
